Player Uwe-Sub with the dspic interface added. download and make.

--- a/client_libs/libplayerc/CMakeLists.txt
+++ b/client_libs/libplayerc/CMakeLists.txt
@@ -55,7 +55,8 @@ SET (playercSrcs    playerc.h
                     dev_stereo.c
                     dev_vectormap.c
                     dev_wifi.c
-                    dev_wsn.c)
+                    dev_wsn.c
+                    dev_dspic)
 IF (NOT HAVE_GETTIMEOFDAY)
     SET (playerreplaceLib playerreplace)
 ENDIF (NOT HAVE_GETTIMEOFDAY)
